Fixing tour image link on smaller displays.

--- a/wp-content/themes/askonasholt2016/assets/scss/components/_tour-wrapper.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_tour-wrapper.scss
@@ -14,6 +14,7 @@
       text-align: center;
   }
   .tour-thumbnail {
+      position: relative;
       height: 300px;
       @include full-bg;
 
@@ -56,8 +57,8 @@
 			padding: $sitepadding;
 		}
 		.tour-thumbnail {
+      position: absolute;      
 			height: 100%;
-			position: absolute;
 		}
 	// }
 }
